fix flicker on swap&load

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,7 @@
+[x-cloak] {
+  display: none !important;
+}
+
 ul#periodes {
   list-style-type: none;
   padding: 0;
